--- a/Cracker.csproj
+++ b/Cracker.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="ScottPlot" Version="4.1.69" />
     </ItemGroup>
 
 </Project>
